--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-actions": "^2.6.5",
+    "whatwg-fetch": "^3.0.0"
   }
 }
